[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthropic-gradio"
version = "0.1.0"
description = "A Python package for creating Gradio applications with Anthropic models"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=5.0.2",
    "anthropic",
]

[project.urls]
homepage = "https://github.com/your-username/anthropic-gradio"
repository = "https://github.com/your-username/anthropic-gradio"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["anthropic_gradio"]

